// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MainNavItem > should render correctly 1`] = `
<DocumentFragment>
  <li
    class="sc-crXcXV bcGptx"
    data-rc="MainNavItem"
    data-state="closed"
  >
    <button
      class="sc-paqrt cuSjYc"
    >
      Item Content
      <span
        aria-hidden="true"
        class="sc-gsnScm cCgoww sc-jqUWZQ kPEbig"
        data-rc="LargeSystemIcon.ChevronYellow"
      >
        <svg
          height="7"
          viewBox="0 0 12 7"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.406.252l-5.16 5.28a.874.874 0 0 0 0 1.216.827.827 0 0 0 1.189 0L6 2.076l4.565 4.672a.827.827 0 0 0 1.189 0 .874.874 0 0 0 0-1.216L6.594.252a.828.828 0 0 0-1.188 0z"
            fill="#F9C000"
            fill-rule="nonzero"
          />
        </svg>
      </span>
    </button>
    <div
      class="sc-iqcnOu jKiPMQ"
    />
  </li>
</DocumentFragment>
`;

exports[`MainNavItem should render correctly 1`] = `
<DocumentFragment>
  <li
    class="sc-csuSiG hrlAfi"
    data-rc="MainNavItem"
    data-state="closed"
  >
    <button
      class="sc-pyfCe hMxGWU"
    >
      Item Content
      <span
        aria-hidden="true"
        class="sc-gswNZR iagQga sc-jrcTuL hgtJKb"
        data-rc="LargeSystemIcon.ChevronYellow"
      >
        <svg>
          chevron-yellow.svg
        </svg>
      </span>
    </button>
    <div
      class="sc-ipEyDJ cPLSnD"
    />
  </li>
</DocumentFragment>
`;
